tests/lean/empty.lean.expected.out
empty.lean:5:25: error: failed to synthesize placeholder
 ⊢ inhabited Empty
